--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.6.0",
         "drupal/ctools": "^3.2",
+        "drupal/default_content_deploy": "^1.0@alpha",
         "drupal/media_entity_browser": "2.x-dev",
+        "drupal/paragraphs": "^1.8",
         "drupal/pathauto": "^1.4",
         "drupal/token": "^1.5",
         "drush/drush": "^9.0.0",
