--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -17,14 +17,18 @@ module:
   ctools_views: 0
   datetime: 0
   dblog: 0
+  default_content: 0
+  default_content_deploy: 0
   dynamic_page_cache: 0
   editor: 0
   entity_browser: 0
   entity_browser_entity_form: 0
+  entity_reference_revisions: 0
   field: 0
   field_ui: 0
   file: 0
   filter: 0
+  hal: 0
   help: 0
   history: 0
   image: 0
@@ -40,6 +44,7 @@ module:
   quickedit: 0
   rdf: 0
   search: 0
+  serialization: 0
   shortcut: 0
   system: 0
   taxonomy: 0
@@ -53,6 +58,7 @@ module:
   menu_link_content: 1
   pathauto: 1
   views: 10
+  paragraphs: 11
   standard: 1000
 theme:
   stable: 0
